fix assist inner overflow

--- a/theme/components/cards/_cards.scss
+++ b/theme/components/cards/_cards.scss
@@ -353,7 +353,6 @@
   height: 275px;
   @include media-breakpoint-up(lg) {
     height: 290px;
-    min-width: 325px;
     width: 345px;
   }
 
@@ -1023,7 +1022,7 @@
 }
 
 .card-steps {
-  // width: 100%;
+  width: fit-content;
   display: flex;
   align-items: center;
   gap: 5.5px;
